--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,3 @@
-img {
-  width: 100%;
-}
 
 .landing {
   position: relative;
@@ -10,6 +7,18 @@ img {
   height: 100vh;
   margin-top: -24px;
   margin-bottom: -50px;
+}
+
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  background-color: black;
+  color: white;
+  text-align: center;
 }
 
 .landing-inner {
